--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-This is a test.
+The default movie scraper, themoviedb, is lacking in the ratings. IMDB contains much better ratings for movies.
+
+This script when run will go through your movie library and update the movies ratings whilst keeping all the other meta data from themoviedb.
+
+Note: This script is not affiliated in any way with IMDB, use it at your own risk.
+
