--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -5,4 +5,5 @@
     <string id="30002">Update all movies</string>
     <string id="30003">Please leave this setting if you don't know what it means.</string>
     <string id="30004">Database type(not yet functional)</string>
+    <string id="30005">MySQL Server Address</string>
 </strings>
