added hyperlink to xbmc forum thread

--- a/README
+++ b/README
@@ -4,3 +4,5 @@ This script when run will go through your movie library and update the movies ra
 
 Note: This script is not affiliated in any way with IMDB, use it at your own risk.
 
+For more info please visit the XBMC forum: http://forum.xbmc.org/showthread.php?t=92132
+
