Updated README, in preparation for new version

--- a/README
+++ b/README
@@ -1,8 +1,15 @@
-The default movie scraper, themoviedb, is lacking in the ratings. IMDB contains much better ratings for movies.
+IMDB Ratings for Movies
+=======================
+*Addon for XBMC*
 
+The default movie scraper, themoviedb, is lacking in the ratings. IMDB contains much better ratings for movies.
 This script when run will go through your movie library and update the movies ratings whilst keeping all the other meta data from themoviedb.
 
-Note: This script is not affiliated in any way with IMDB, use it at your own risk.
+**Note: This script is not affiliated in any way with IMDB, use it at your own risk.**
 
 For more info please visit the XBMC forum: http://forum.xbmc.org/showthread.php?t=92132
 
+Installation
+------------
+
+To install the Addon, follow the guide found here: http://wiki.xbmc.org/?title=Add-ons using the "Install from zip file" method.
